# DOFA-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  README.txt  best_lightning_metrics.json  debug.sh  demo.ipynb  factory.py  main.py  models_dwv.py  pyproject.toml  test_config.py  test_od.py
.github/workflows/: style.yaml
datasets/: benv2_wrapper.py  data_module.py  enmap_corine_wrapper.py  geobench_wrapper.py  resisc_wrapper.py
engine/: engine_finetune.py  engine_finetune_seg_ofa.py
fm_weights/panopticon-v1-1103/: config.yaml
foundation_models/: __init__.py  croma_wrapper.py  dinov2_wrapper.py  dofa_wrapper.py  gfm_wrapper.py  panopticon_wrapper.py  satmae_wrapper.py  scalemae_wrapper.py  softcon_wrapper.py
foundation_models/CROMA/: LICENSE  README.md  pretrain_croma.py
foundation_models/DOFA/: models_dwv.py
foundation_models/GFM/: BEN.yaml  config.py  swin_transformer_seg.py  utils.py
foundation_models/SatMAE/: models_vit_group_channels_cls.py  models_vit_group_channels_seg.py
foundation_models/ScaleMAE/: models_vit.py  models_vit_seg.py
requirements/: style.txt
scripts/: dinov2_train_script_cls.sh  dofa_train_script_seg_NeonTree.sh  dofa_train_script_seg_SA-crop.sh  dofa_train_script_seg_cashew.sh  dofa_train_script_seg_chesapeake.sh  dofa_train_script_seg_nzcattle.sh  dofa_train_script_seg_pv4ger.sh  exp_config.py  generate_bash_scripts.py  generate_bash_scripts_ray_tune.py  panopticon_train_script_cls.sh  run.sh  train_linear_geobench_cls_croma.sh  train_script.sh  train_script_cls.sh  train_script_seg.sh
src/: config.py  dataset_config.py  factory.py  fm_weights  hparam_ray.py  hparam_ray_hydra.py  main.py  model_config.py
src/configs/: config.yaml  (+1 more)
tools/: collect_results.py  mlflow_analyze.py
util/: config.py  misc.py  pos_embed.py
(+388 files in other folders)
